--- a/_modules/rtmidi/midiutil.html
+++ b/_modules/rtmidi/midiutil.html
@@ -1,18 +1,17 @@
 
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>rtmidi.midiutil &#8212; python-rtmidi 1.4.9 documentation</title>
-    <link rel="stylesheet" href="../../_static/pygments.css" type="text/css" />
-    <link rel="stylesheet" href="../../_static/classic.css" type="text/css" />
+    <title>rtmidi.midiutil &#8212; python-rtmidi 1.5.0rc1 documentation</title>
+    <link rel="stylesheet" type="text/css" href="../../_static/pygments.css" />
+    <link rel="stylesheet" type="text/css" href="../../_static/classic.css" />
     
-    <script id="documentation_options" data-url_root="../../" src="../../_static/documentation_options.js"></script>
-    <script src="../../_static/jquery.js"></script>
-    <script src="../../_static/underscore.js"></script>
+    <script data-url_root="../../" id="documentation_options" src="../../_static/documentation_options.js"></script>
     <script src="../../_static/doctools.js"></script>
+    <script src="../../_static/sphinx_highlight.js"></script>
     
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" /> 
@@ -26,7 +25,7 @@
         <li class="right" >
           <a href="../../py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li class="nav-item nav-item-0"><a href="../../index.html">python-rtmidi 1.4.9 documentation</a> &#187;</li>
+        <li class="nav-item nav-item-0"><a href="../../index.html">python-rtmidi 1.5.0rc1 documentation</a> &#187;</li>
           <li class="nav-item nav-item-1"><a href="../index.html" accesskey="U">Module code</a> &#187;</li>
         <li class="nav-item nav-item-this"><a href="">rtmidi.midiutil</a></li> 
       </ul>
@@ -78,13 +77,13 @@
 
 
 <span class="k">def</span> <span class="nf">_prompt_for_virtual</span><span class="p">(</span><span class="n">type_</span><span class="p">):</span>
-    <span class="sd">&quot;&quot;&quot;Prompt on the console whether a virtual MIDI port should be opened.&quot;&quot;&quot;</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;Prompt on the console whether a virtual MIDI port should be opened.&quot;&quot;&quot;</span>
     <span class="k">return</span> <span class="n">raw_input</span><span class="p">(</span><span class="s2">&quot;Do you want to create a virtual MIDI </span><span class="si">%s</span><span class="s2"> port? (y/N) &quot;</span> <span class="o">%</span>
                      <span class="n">type_</span><span class="p">)</span><span class="o">.</span><span class="n">strip</span><span class="p">()</span><span class="o">.</span><span class="n">lower</span><span class="p">()</span> <span class="ow">in</span> <span class="p">[</span><span class="s1">&#39;y&#39;</span><span class="p">,</span> <span class="s1">&#39;yes&#39;</span><span class="p">]</span>
 
 
 <div class="viewcode-block" id="get_api_from_environment"><a class="viewcode-back" href="../../rtmidi.html#rtmidi.midiutil.get_api_from_environment">[docs]</a><span class="k">def</span> <span class="nf">get_api_from_environment</span><span class="p">(</span><span class="n">api</span><span class="o">=</span><span class="n">rtmidi</span><span class="o">.</span><span class="n">API_UNSPECIFIED</span><span class="p">):</span>
-    <span class="sd">&quot;&quot;&quot;Return RtMidi API specified in the environment if any.</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;Return RtMidi API specified in the environment if any.</span>
 
 <span class="sd">    If the optional api argument is ``rtmidi.API_UNSPECIFIED`` (the default),</span>
 <span class="sd">    look in the environment variable ``RTMIDI_API`` for the name of the RtMidi</span>
@@ -107,7 +106,7 @@
 
 
 <div class="viewcode-block" id="list_available_ports"><a class="viewcode-back" href="../../rtmidi.html#rtmidi.midiutil.list_available_ports">[docs]</a><span class="k">def</span> <span class="nf">list_available_ports</span><span class="p">(</span><span class="n">ports</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span> <span class="n">midiio</span><span class="o">=</span><span class="kc">None</span><span class="p">):</span>
-    <span class="sd">&quot;&quot;&quot;List MIDI ports given or available on given MIDI I/O instance.&quot;&quot;&quot;</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;List MIDI ports given or available on given MIDI I/O instance.&quot;&quot;&quot;</span>
     <span class="k">if</span> <span class="n">ports</span> <span class="ow">is</span> <span class="kc">None</span><span class="p">:</span>
         <span class="n">ports</span> <span class="o">=</span> <span class="n">midiio</span><span class="o">.</span><span class="n">get_ports</span><span class="p">()</span>
         <span class="n">type_</span> <span class="o">=</span> <span class="s2">&quot; input&quot;</span> <span class="k">if</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">midiio</span><span class="p">,</span> <span class="n">rtmidi</span><span class="o">.</span><span class="n">MidiIn</span><span class="p">)</span> <span class="k">else</span> <span class="s2">&quot; ouput&quot;</span>
@@ -126,7 +125,7 @@
 
 
 <div class="viewcode-block" id="list_input_ports"><a class="viewcode-back" href="../../rtmidi.html#rtmidi.midiutil.list_input_ports">[docs]</a><span class="k">def</span> <span class="nf">list_input_ports</span><span class="p">(</span><span class="n">api</span><span class="o">=</span><span class="n">rtmidi</span><span class="o">.</span><span class="n">API_UNSPECIFIED</span><span class="p">):</span>
-    <span class="sd">&quot;&quot;&quot;List available MIDI input ports.</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;List available MIDI input ports.</span>
 
 <span class="sd">    Optionally the RtMidi API can be passed with the ``api`` argument. If not</span>
 <span class="sd">    it will be determined via the ``get_api_from_environment`` function.</span>
@@ -138,11 +137,12 @@
 
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="n">midiin</span> <span class="o">=</span> <span class="n">rtmidi</span><span class="o">.</span><span class="n">MidiIn</span><span class="p">(</span><span class="n">get_api_from_environment</span><span class="p">(</span><span class="n">api</span><span class="p">))</span>
-    <span class="n">list_available_ports</span><span class="p">(</span><span class="n">midiio</span><span class="o">=</span><span class="n">midiin</span><span class="p">)</span></div>
+    <span class="n">list_available_ports</span><span class="p">(</span><span class="n">midiio</span><span class="o">=</span><span class="n">midiin</span><span class="p">)</span>
+    <span class="n">midiin</span><span class="o">.</span><span class="n">delete</span><span class="p">()</span></div>
 
 
 <div class="viewcode-block" id="list_output_ports"><a class="viewcode-back" href="../../rtmidi.html#rtmidi.midiutil.list_output_ports">[docs]</a><span class="k">def</span> <span class="nf">list_output_ports</span><span class="p">(</span><span class="n">api</span><span class="o">=</span><span class="n">rtmidi</span><span class="o">.</span><span class="n">API_UNSPECIFIED</span><span class="p">):</span>
-    <span class="sd">&quot;&quot;&quot;List available MIDI output ports.</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;List available MIDI output ports.</span>
 
 <span class="sd">    Optionally the RtMidi API can be passed with the ``api`` argument. If not</span>
 <span class="sd">    it will be determined via the ``get_api_from_environment`` function.</span>
@@ -154,13 +154,14 @@
 
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="n">midiout</span> <span class="o">=</span> <span class="n">rtmidi</span><span class="o">.</span><span class="n">MidiOut</span><span class="p">(</span><span class="n">get_api_from_environment</span><span class="p">(</span><span class="n">api</span><span class="p">))</span>
-    <span class="n">list_available_ports</span><span class="p">(</span><span class="n">midiio</span><span class="o">=</span><span class="n">midiout</span><span class="p">)</span></div>
+    <span class="n">list_available_ports</span><span class="p">(</span><span class="n">midiio</span><span class="o">=</span><span class="n">midiout</span><span class="p">)</span>
+    <span class="n">midiout</span><span class="o">.</span><span class="n">delete</span><span class="p">()</span></div>
 
 
 <div class="viewcode-block" id="open_midiport"><a class="viewcode-back" href="../../rtmidi.html#rtmidi.midiutil.open_midiport">[docs]</a><span class="k">def</span> <span class="nf">open_midiport</span><span class="p">(</span><span class="n">port</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span> <span class="n">type_</span><span class="o">=</span><span class="s2">&quot;input&quot;</span><span class="p">,</span> <span class="n">api</span><span class="o">=</span><span class="n">rtmidi</span><span class="o">.</span><span class="n">API_UNSPECIFIED</span><span class="p">,</span>
                   <span class="n">use_virtual</span><span class="o">=</span><span class="kc">False</span><span class="p">,</span> <span class="n">interactive</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">client_name</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span>
                   <span class="n">port_name</span><span class="o">=</span><span class="kc">None</span><span class="p">):</span>
-    <span class="sd">&quot;&quot;&quot;Open MIDI port for input or output and return MidiIn/MidiOut instance.</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;Open MIDI port for in-/output and return MidiIn/-Out instance and port name.</span>
 
 <span class="sd">    Arguments:</span>
 
@@ -301,10 +302,10 @@
 
 <div class="viewcode-block" id="open_midiinput"><a class="viewcode-back" href="../../rtmidi.html#rtmidi.midiutil.open_midiinput">[docs]</a><span class="k">def</span> <span class="nf">open_midiinput</span><span class="p">(</span><span class="n">port</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span> <span class="n">api</span><span class="o">=</span><span class="n">rtmidi</span><span class="o">.</span><span class="n">API_UNSPECIFIED</span><span class="p">,</span> <span class="n">use_virtual</span><span class="o">=</span><span class="kc">False</span><span class="p">,</span>
                    <span class="n">interactive</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">client_name</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span> <span class="n">port_name</span><span class="o">=</span><span class="kc">None</span><span class="p">):</span>
-    <span class="sd">&quot;&quot;&quot;Open a MIDI port for input and return a MidiIn instance.</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;Open a MIDI port for input and return a MidiIn instance and port name.</span>
 
-<span class="sd">    See the ``open_midiport`` function for information on parameters and</span>
-<span class="sd">    possible exceptions.</span>
+<span class="sd">    See the ``open_midiport`` function for information on parameters, return</span>
+<span class="sd">    types and possible exceptions.</span>
 
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="k">return</span> <span class="n">open_midiport</span><span class="p">(</span><span class="n">port</span><span class="p">,</span> <span class="s2">&quot;input&quot;</span><span class="p">,</span> <span class="n">api</span><span class="p">,</span> <span class="n">use_virtual</span><span class="p">,</span> <span class="n">interactive</span><span class="p">,</span>
@@ -313,10 +314,10 @@
 
 <div class="viewcode-block" id="open_midioutput"><a class="viewcode-back" href="../../rtmidi.html#rtmidi.midiutil.open_midioutput">[docs]</a><span class="k">def</span> <span class="nf">open_midioutput</span><span class="p">(</span><span class="n">port</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span> <span class="n">api</span><span class="o">=</span><span class="n">rtmidi</span><span class="o">.</span><span class="n">API_UNSPECIFIED</span><span class="p">,</span> <span class="n">use_virtual</span><span class="o">=</span><span class="kc">False</span><span class="p">,</span>
                     <span class="n">interactive</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">client_name</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span> <span class="n">port_name</span><span class="o">=</span><span class="kc">None</span><span class="p">):</span>
-    <span class="sd">&quot;&quot;&quot;Open a MIDI port for output and return a MidiOut instance.</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;Open a MIDI port for output and return a MidiOut instance and port name.</span>
 
-<span class="sd">    See the ``open_midiport`` function for information on parameters and</span>
-<span class="sd">    possible exceptions.</span>
+<span class="sd">    See the ``open_midiport`` function for information on parameters, return</span>
+<span class="sd">    types and possible exceptions.</span>
 
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="k">return</span> <span class="n">open_midiport</span><span class="p">(</span><span class="n">port</span><span class="p">,</span> <span class="s2">&quot;output&quot;</span><span class="p">,</span> <span class="n">api</span><span class="p">,</span> <span class="n">use_virtual</span><span class="p">,</span> <span class="n">interactive</span><span class="p">,</span>
@@ -333,12 +334,12 @@
   <h3 id="searchlabel">Quick search</h3>
     <div class="searchformwrapper">
     <form class="search" action="../../search.html" method="get">
-      <input type="text" name="q" aria-labelledby="searchlabel" />
+      <input type="text" name="q" aria-labelledby="searchlabel" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false"/>
       <input type="submit" value="Go" />
     </form>
     </div>
 </div>
-<script>$('#searchbox').show(0);</script>
+<script>document.getElementById('searchbox').style.display = "block"</script>
         </div>
       </div>
       <div class="clearer"></div>
@@ -352,14 +353,14 @@
         <li class="right" >
           <a href="../../py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li class="nav-item nav-item-0"><a href="../../index.html">python-rtmidi 1.4.9 documentation</a> &#187;</li>
+        <li class="nav-item nav-item-0"><a href="../../index.html">python-rtmidi 1.5.0rc1 documentation</a> &#187;</li>
           <li class="nav-item nav-item-1"><a href="../index.html" >Module code</a> &#187;</li>
         <li class="nav-item nav-item-this"><a href="">rtmidi.midiutil</a></li> 
       </ul>
     </div>
     <div class="footer" role="contentinfo">
-        &#169; Copyright 2012 - 2021, Christopher Arndt.
-      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 3.5.4.
+        &#169; Copyright 2012 - 2022, Christopher Arndt.
+      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 6.2.1.
     </div>
   </body>
 </html>
